--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb://mongo:eqgcDzwdexscLDOTBjJvhbPpdVgdkBBT@junction.proxy.rlwy.net:45414
 
 JWT_SEED=This_is_secret_key
 
